--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
                 document.getElementById("error-message").textContent = "كلمة السر غير صحيحة!";
             }
         }
+
+        // تشغيل التحقق عند الضغط على Enter
+        document.getElementById("passwordInput").addEventListener("keypress", function(event) {
+            if (event.key === "Enter") {
+                checkPassword();
+            }
+        });
     </script>
 
 </body>
