--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="موقع متخصص في الأطعمة الصحية، وصفات صحية، نصائح غذائية، وقوائم أطعمة مفيدة لصحتك">
-    <meta name="keywords" content="أطعمة صحية, نظام غذائي, وصفات صحية, نصائح غذائية, حمية, تغذية سليمة, أغذية مفيدة">
+    <meta name="keywords" content="أطعمة صحية, نظام غذائي, وصفات صحية,  انيتينسمبنذوينسنس, حمية, تغذية سليمة, أغذية مفيدة">
     <title>دليل الأطعمة الصحية - Healthy Foods Guide</title>
     
     <!-- روابط SEO إضافية -->
