--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
         <p>جاري معالجة البيانات...</p>
     </div>
 
+<script src="config.js"></script>
+<script src="script.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
