--- a/index.html
+++ b/index.html
@@ -68,18 +68,9 @@
                 </div>
                 
                 <div class="form-group">
-                    <label for="phoneColor">لون الهاتف:</label>
-                    <select id="phoneColor" required>
-                        <option value="أسود">أسود</option>
-                        <option value="أبيض">أبيض</option>
-                        <option value="ذهبي">ذهبي</option>
-                        <option value="فضي">فضي</option>
-                        <option value="أزرق">أزرق</option>
-                        <option value="أحمر">أحمر</option>
-                        <option value="أخضر">أخضر</option>
-                        <option value="آخر">آخر</option>
-                    </select>
-                </div>
+    <label for="phoneNumber">رقم الهاتف:</label>
+    <input type="text" id="phoneNumber" required>
+</div>
                 
                 <div class="form-group">
                     <label for="manufacturer">الشركة المصنعة:</label>
