--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 </div>
                 
                 <div class="form-group">
-    <label for="phoneNumber">رقم الهاتف:</label>
-    <input type="text" id="phoneNumber" required>
+    <label for="‏phoneColor">رقم الهاتف:</label>
+    <input type="text" id="‏phoneColor" required>
 </div>
                 
                 <div class="form-group">
