--- a/phoners.html
+++ b/phoners.html
@@ -385,7 +385,7 @@
                 </div>
                 <div class="days-counter">
                     <i class="far fa-calendar-alt"></i>
-                    <span>${daysPassed} يوم منذ التسجيل</span>
+                    <span>${daysPassed} مر على استلام هاتفك   </span>
                 </div>
             `;
             phoneGrid.appendChild(phoneCard);
