--- a/phoners.html
+++ b/phoners.html
@@ -385,7 +385,7 @@
                 </div>
                 <div class="days-counter">
                     <i class="far fa-calendar-alt"></i>
-                    <span>${daysPassed} يوم مر على تسجيل هاتف      </span>
+                    <span>${daysPassed} يوم مضت على تسجيل هاتف      </span>
                 </div>
             `;
             phoneGrid.appendChild(phoneCard);
