--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div id="devicesList">
-            <!-- سيتم ملؤها بالبيانات من السيرفر -->
+            <!-- سيتم ملؤها بالبيانات من Server.md -->
         </div>
     </div>
 
@@ -68,9 +68,9 @@
                 </div>
                 
                 <div class="form-group">
-                    <label for="phoneNumber">رقم الهاتف:</label>
-                    <input type="text" id="phoneNumber" required>
-                </div>
+    <label for="phoneNumber">رقم الهاتف:</label>
+    <input type="text" id="phoneNumber" required>
+</div>
                 
                 <div class="form-group">
                     <label for="manufacturer">الشركة المصنعة:</label>
@@ -95,7 +95,8 @@
         <p>جاري معالجة البيانات...</p>
     </div>
 
-    <script src="config.js"></script>
+<script src="config.js"></script>
+<script src="script.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
