--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
 
     <div class="container">
         <div id="statsBar">
-    <div class="stat-card stat-registered">
-        <div class="stat-icon"><i class="fas fa-mobile-screen"></i></div>
-        <h3>إجمالي الأجهزة</h3>
-        <p id="totalDevices">0</p>
-    </div>
-    <div class="stat-card stat-registered">
-        <div class="stat-icon"><i class="fas fa-tools"></i></div>
-        <h3>قيد الصيانة</h3>
-        <p id="registeredDevices">0</p>
-    </div>
-    <div class="stat-card stat-reached">
-        <div class="stat-icon"><i class="fas fa-check-circle"></i></div>
-        <h3>تم الوصول</h3>
-        <p id="reachedDevices">0</p>
-    </div>
-    <div class="stat-card stat-delivered">
-        <div class="stat-icon"><i class="fas fa-truck"></i></div>
-        <h3>تم الاستلام</h3>
-        <p id="deliveredDevices">0</p>
-    </div>
-</div>
+            <div class="stat-card gradient-1">
+                <div class="stat-icon"><i class="fas fa-mobile-screen"></i></div>
+                <h3>إجمالي الأجهزة</h3>
+                <p id="totalDevices">0</p>
+            </div>
+            <div class="stat-card gradient-2">
+                <div class="stat-icon"><i class="fas fa-tools"></i></div>
+                <h3>قيد الصيانة</h3>
+                <p id="registeredDevices">0</p>
+            </div>
+            <div class="stat-card gradient-3">
+                <div class="stat-icon"><i class="fas fa-check-circle"></i></div>
+                <h3>تم الوصول</h3>
+                <p id="reachedDevices">0</p>
+            </div>
+            <div class="stat-card gradient-4">
+                <div class="stat-icon"><i class="fas fa-truck"></i></div>
+                <h3>تم الاستلام</h3>
+                <p id="deliveredDevices">0</p>
+            </div>
+        </div>
 
         <div id="devicesList">
             <!-- سيتم ملؤها بالبيانات من Server.md -->
