--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@
                 <div class="stat-icon"><i class="fas fa-tools"></i></div>
                 <h3>قيد الصيانة</h3>
                 <p id="registeredDevices">0</p>
-            </div>
-            <div class="stat-card gradient-3">
-                <div class="stat-icon"><i class="fas fa-check-circle"></i></div>
-                <h3>تم الوصول</h3>
-                <p id="reachedDevices">0</p>
-            </div>
-            <div class="stat-card gradient-4">
-                <div class="stat-icon"><i class="fas fa-truck"></i></div>
-                <h3>تم الاستلام</h3>
-                <p id="deliveredDevices">0</p>
-            </div>
+        
+</div>
+<div class="stat-card gradient-3">
+    <div class="stat-icon"><i class="fas fa-check-circle"></i></div>
+    <h3>تم الوصول</h3>
+    <p id="reachedDevices">0</p>
+</div>
+<div class="stat-card gradient-4">
+    <div class="stat-icon"><i class="fas fa-box-open"></i></div>
+    <h3>تم الاستلام</h3>
+    <p id="deliveredDevices">0</p>
+</div>
         </div>
 
         <div id="devicesList">
