--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <div class="info-item">
                     <i class="fas fa-user"></i>
                     <div>
-                        <strong>الاسم الكامل:</strong> قصي محمد الشريف
+                        <strong>الاسم الكامل:</strong> قصي زياد الشريف
                     </div>
                 </div>
                 <div class="info-item">
