--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8">
   <title>طباعة ملصق 5x3 سم</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="manifest.json">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js');
+    }
+  </script>
   <style>
-    body { font-family: Arial; text-align: center; direction: rtl; padding: 20px; }
+    body { font-family: Arial; text-align: center; direction: rtl; padding: 20px; margin: 0; }
+    h2 { margin-top: 40px; }
     button { padding: 10px 20px; font-size: 16px; }
     iframe { width: 100%; height: 300px; border: 1px solid #ccc; margin-top: 20px; }
   </style>
