--- a/index.html
+++ b/index.html
@@ -612,5 +612,6 @@ ${item.quantity} × ${item.price.toFixed(2)} = ${item.total.toFixed(2)}\n
             );
         });
     </script>
+    <script src="/app.js"></script>
 </body>
 </html>
